Ensure a layer is activated for new views

Fixes a bug when deleting the topmost layer and then
opening a new view. When the new view opens none of
the layers are activated, you first need to click
inside the dockers panel.

BUG:518465